For changes see changelog for 1.9.3-1.9.5, am too lazy to list them, sorry

--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -28,6 +28,12 @@
   "key.beyonders.open_wheel_toggle": "Open Ability Wheel (Toggle)",
   "key.beyonders.open_wheel_hold": "Open Ability Wheel",
   "key.beyonders.use_ability": "Use Ability",
+  "key.beyonders.use_ability_bar_ability_1": "Use Ability Bar Ability 1",
+  "key.beyonders.use_ability_bar_ability_2": "Use Ability Bar Ability 2",
+  "key.beyonders.use_ability_bar_ability_3": "Use Ability Bar Ability 3",
+  "key.beyonders.use_ability_bar_ability_4": "Use Ability Bar Ability 4",
+  "key.beyonders.use_ability_bar_ability_5": "Use Ability Bar Ability 5",
+  "key.beyonders.use_ability_bar_ability_6": "Use Ability Bar Ability 6",
 
 
 
