new common ability Angle Authority

--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -50,6 +50,10 @@
   "lotmcraft.spirit_vision_ability": "Spirit Vision",
   "ability.lotmcraft.divination.danger_premonition": "Danger Premonition",
   "ability.lotmcraft.divination.dream_divination": "Dream Divination",
+  "lotmcraft.angel_authority_ability": "Angel Authority",
+  "lotmcraft.angel_authority_ability.description": "Angelic power that allows you to traverse the spirit world and shatter artifacts",
+  "ability.lotmcraft.angel_authority.spirit_world_passage": "Spirit World Passage",
+  "ability.lotmcraft.angel_authority.artifact_shattering": "Artifact Shattering",
 
   "lotmcraft.illuminate_ability": "Illuminate",
   "lotmcraft.illuminate_ability.description": "Create a small light",
