--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -1145,5 +1145,8 @@
   "lotmcraft.griefing_enabled_required": "Enable griefing for this ability to work",
 
   "lotmcraft.own_prayings": "You have heard your own prayings",
-  "lotmcraft.far_away_prayings": "You have heard whispers of prayings, but you are too far away to hear them clearly"
+  "lotmcraft.far_away_prayings": "You have heard whispers of prayings, but you are too far away to hear them clearly",
+  "lotmcraft.honorific_prayings": "You have heard prayings from %s\nTheir general info: pathway - %s; Sequence - %i; Position - %i %i %i",
+  "lotmcraft.honorific_prayings_message": "You have heard message: %s",
+  "lotmcraft.honorific_prayings_send_message_button": "[ SEND MESSAGE ]"
 }
