--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -340,6 +340,8 @@
   "lotmcraft.concealment_ability.description": "Conceal everything around you, effectively erasing it",
   "ability.lotmcraft.concealment.enter_concealed_area": "Enter Concealed Area",
   "ability.lotmcraft.concealment.surroundings": "Conceal Surroundings",
+  "lotmcraft.sword_of_darkness_ability": "Sword of Darkness",
+  "lotmcraft.sword_of_darkness_ability.description": "Create a giant slash that cuts everything in its way",
 
   "lotmcraft.mighty_blow_ability": "Mighty Blow",
   "lotmcraft.mighty_blow_ability.description": "Strike your target with one single powerful blow",
@@ -446,6 +448,14 @@
   "lotmcraft.area_desolation_ability.description": "Designate an area (200x200) that will become desolate and lifeless. Use the ability again in the same area to revert it back to normal",
   "lotmcraft.blooming_area_ability": "Blooming Area",
   "lotmcraft.blooming_area_ability.description": "Designate an area (200x200) that will become lush and flourish greatly. Inside there wil be no hunger and other various effects. Use the ability again in the same area to revert it back to normal",
+  "lotmcraft.world_creation_ability": "World Creation",
+  "lotmcraft.world_creation_ability.description": "Create and nurture a pocket world",
+  "lotmcraft.wrath_of_nature_ability": "Wrath of Nature",
+  "lotmcraft.wrath_of_nature_ability.description": "Command nature to attack your foes in various ways",
+  "ability.lotmcraft.wrath_of_nature.lightning": "Lightning",
+  "ability.lotmcraft.wrath_of_nature.fire": "Wildfire",
+  "ability.lotmcraft.wrath_of_nature.moon": "Moon",
+  "ability.lotmcraft.wrath_of_nature.moon_on_cooldown": "The Moon is already shining",
 
   "lotmcraft.door_opening_ability": "Door Opening",
   "lotmcraft.door_opening_ability.description": "Use on solid walls to pass through them",
