finished the controlling logic, its not tested on dedicated servers, feel free to change/add anything to it

--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -34,6 +34,7 @@
   "key.beyonders.use_ability_bar_ability_4": "Use Ability Bar Ability 4",
   "key.beyonders.use_ability_bar_ability_5": "Use Ability Bar Ability 5",
   "key.beyonders.use_ability_bar_ability_6": "Use Ability Bar Ability 6",
+  "key.beyonders.return_to_main_body": "Return to Main Body",
 
 
 
