Abyss sequence 4 abilities

--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -235,6 +235,17 @@
   "lotmcraft.defiling_seed_ability": "Defiling Seed",
   "lotmcraft.defiling_seed_ability.description": "Bury your seed into target to corrupt them",
   "ability.lotmcraft.defiling_seed.no_target": "No Target found",
+  "lotmcraft.demonic_spells_ability": "Demonic Spells",
+  "lotmcraft.demonic_spells_ability.description": "Cast devastating demonic magic",
+  "ability.lotmcraft.demonic_spells.acid_swamp": "Acid Swamp",
+  "ability.lotmcraft.demonic_spells.filthy_illusion": "Filthy Illusion",
+  "ability.lotmcraft.demonic_spells.hellfire_wall": "Hellfire Wall",
+  "lotmcraft.mind_fog_ability": "Mind Fog",
+  "lotmcraft.mind_fog_ability.description": "Drain sanity from nearby enemies and inflict random negative effects",
+  "lotmcraft.desire_control_ability": "Desire Control",
+  "lotmcraft.desire_control_ability.description": "Manipulate the desires of your enemies, forcing them to lose control",
+  "ability.lotmcraft.desire_control.single_target": "Single Target Control",
+  "ability.lotmcraft.desire_control.aoe": "Area Desire Explosion",
 
   "lotmcraft.flame_controlling_ability": "Flame Controlling",
   "lotmcraft.flame_controlling_ability.description": "Shoot out flames",
